Switch/err
Sw.cpp:73:6: error: prototype for ‘void Switch::update_routing_table(std::string, int, int)’ does not match any in class ‘Switch’
 void Switch::update_routing_table(string dest, int length, int port)
      ^
In file included from Sw.cpp:1:0:
Switch.h:18:8: error: candidate is: void Switch::update_routing_table(address, int, int)
   void update_routing_table(address dest, int length, int port);
        ^
Sw.cpp: In member function ‘void Switch::update(Packet)’:
Sw.cpp:98:89: error: no matching function for call to ‘Switch::update_routing_table(std::basic_string<char>, int, long unsigned int)’
     update_routing_table(p.getDest().to_string(), atoi(length), p.getSource().to_ulong());
                                                                                         ^
Sw.cpp:98:89: note: candidate is:
In file included from Sw.cpp:1:0:
Switch.h:18:8: note: void Switch::update_routing_table(address, int, int)
   void update_routing_table(address dest, int length, int port);
        ^
Switch.h:18:8: note:   no known conversion for argument 1 from ‘std::basic_string<char>’ to ‘address {aka std::bitset<128ul>}’
Sw.cpp: In member function ‘void Switch::pass_data(Packet)’:
Sw.cpp:105:37: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return connected_client[dest];
                                     ^
Sw.cpp: In member function ‘void Switch::set_addr(Packet, sockaddr_in*)’:
Sw.cpp:135:19: error: no matching function for call to ‘Packet::setDest(std::string&)’
     p.setDest(addr);
                   ^
Sw.cpp:135:19: note: candidate is:
In file included from Switch.h:4:0,
                 from Sw.cpp:1:
../libs/Packet.h:43:10: note: void Packet::setDest(address)
     void setDest(address dest) { this->dest = dest; }
          ^
../libs/Packet.h:43:10: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘address {aka std::bitset<128ul>}’
Sw.cpp:140:45: error: ‘std::string’ has no member named ‘to_string’
     cout<<"I set address for clinet "<<addr.to_string()<<endl;
                                             ^
make: *** [Switch.o] Error 1
